# neural-nets

./: .gitattributes  .gitignore  README.md  pyproject.toml
custom_se_resnet/: architecture.txt  layers.py  networks.py
linear_regression/: main.ipynb  networks.py  trainers.py  utils.py
math/: data_flow_in_cnn.ipynb  differential_calculus.ipynb  nn_from_scratch.ipynb
notebooks/resnet/: check_architecture.ipynb
notebooks/vae/: coco_decomposition.ipynb
notebooks/yolo/v1/: infer.ipynb
notebooks/yolo/v2/: anchor_bboxes_clustering.ipynb  infer.ipynb  live_infer.ipynb  notes.ipynb
src/components/: blocks.py
src/cvnets/: __init__.py
src/cvnets/resnet/: net.py  train.py  utils.py
src/cvnets/unet/: README.md  config.yaml  dataset.py  eval.py  loss.py  net.py  train.py
src/cvnets/unet/network/: __init__.py  resunet.py  unet.py
src/cvnets/vae/: README.md  config.yaml  dataset.py  loss.py  net.py  train.py
src/cvnets/yolo/: README.md  utils.py  voc.py
src/cvnets/yolo/v1/: config.yaml  dataset.py  eval.py  infer.ipynb  loss.py  net.py  train.py  utils.py  voc.py
src/cvnets/yolo/v2/: anchor_bboxes_clustering.ipynb  compute_anchor_bboxes.py  config.yaml  dataset.py  eval.py  find_anchors.py  loss.py  net.py  notes.ipynb  test.py  train.py  utils.py  voc.py
src/cvnets/yolov1/: config.yaml  eval.py  infer.ipynb  loss.py  net.py  train.py  utils.py  voc.py
src/cvnets/yolov2/: net.py  utils.py  voc.py
src/llms/: config.yaml  dataset.py  layers.py  models.py  train.py
src/nns/components/: __init__.py  losses.py
src/nns/gpt/: README.md  layers.py  models.py  train.py  utils.py
src/nns/resnet/: README.md  net.py  train.py
src/nns/unet/: dataset.py  eval.py  train.py  utils.py
src/nns/unet/network/: __init__.py  resunetpp.py  unet.py
src/nns/vae/: config.yaml  dataset.py  loss.py  train.py  utils.py
src/nns/yolo/: utils.py  voc.py
src/nns/yolo/v1/: dataset.py  eval.py  loss.py  train.py  utils.py
src/nns/yolo/v2/: config.yaml  dataset.py  eval.py  find_anchors.py  loss.py  train.py  utils.py
